--- a/styles/style.css
+++ b/styles/style.css
@@ -131,12 +131,13 @@ body {
   font-size: 3rem;
   color: #9EAEBB;
   text-align: center;
-  margin: 60px 60px;
+  margin: 60px 0px;
 }
 
 @media (min-width: 768px) {
   .featured-text h2 {
     font-size: 4rem;
+    margin: 60px 60px;
   }
 }
 
@@ -147,6 +148,7 @@ body {
   line-height: 2rem;
   text-align: left;
   margin: 0 32px;
+  margin-bottom: 72px;
 }
 
 @media (min-width: 768px) {
@@ -211,6 +213,7 @@ body {
 @media (min-width: 768px) {
   .featured-text2 h2 {
     font-size: 4rem;
+    margin: 60px 0px;
   }
 }
 
@@ -225,10 +228,16 @@ body {
 
 @media (min-width: 768px) {
   .featured-text2 p {
-    width: 300px;
-    margin: 60px 60px;
-    border-left: 0.5rem solid #9EAEBB;
+    width: 400px;
+    margin: 60px 0;
+    border-left: 0.2rem solid #9EAEBB;
     padding: 0 0 0 2rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .container-over .img-oorzaak {
+    margin-left: 90px;
   }
 }
 
@@ -624,6 +633,35 @@ body {
 .col-donaties .tabel {
   margin-left: 10px;
   color: #707070;
+}
+
+.col-donaties .bttndoneer {
+  display: block;
+  background-color: #FFFFFF;
+  color: #9EAEBB;
+  border: 1px solid #9EAEBB;
+  padding: 10px 50px;
+  text-decoration: none;
+  border-radius: 50px;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  width: 100%;
+  margin-top: 40px;
+  margin-bottom: 72px;
+}
+
+@media (min-width: 768px) {
+  .col-donaties .bttndoneer {
+    margin-top: 20px;
+    margin-bottom: 60px;
+  }
+}
+
+.col-donaties .bttndoneer:hover {
+  background-color: #9EAEBB;
+  color: #FFFFFF;
 }
 
 /* contact */
